# Scratch-3D-Engine

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Doom-engine.sln  README.md
Doom-engine/: Doom-engine.cpp  Doom-engine.vcxproj  Doom-engine.vcxproj.filters
include/: block.h  point.h  utils.h
src/: CMakeLists.txt  Drawable.h  Fragment.h  FragmentShader.h  IDrawable.h  Mesh.h  Rasterizer.h  RelativeWindow.cpp  RelativeWindow.h  Texture.h  User.h  Vertex.h  VertexLightShader.h  VertexShader.h  bean.h  camera.cpp  camera.h  drawer.cpp  engine.cpp  engine.h  light.h  main.cpp  main_.cpp  map.cpp  map.h  mat.h  mesh.h  object.h  resource.h  tex_vertex.h  triangle.h  user.cpp  user.h  util_draw.h  util_mat.h  util_std.h  util_vec.h  utils.cpp  utils.h  vec.h  (+7 more)
src/Engine/: CMakeLists.txt  RayCasting.cpp  RayCasting.h
tests/: CMakeLists.txt  RelativeViewTest.cpp  UserTest.cpp  test_mesh.cpp  test_move.cpp  test_rendering.cpp  test_util_draw.cpp  test_util_mat.cpp  test_zbuffer.cpp  testa.cpp
