CMAKE_MINIMUM_REQUIRED (VERSION 3.10.2)
# project setting
SET( BINARY ${CMAKE_PROJECT_NAME} )
SET( EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR} )
SET( LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR} )

# Add Subdirectory as library core engine 
# add_subdirectory(./Engine ../build/src/engine)

# loading SDL2 package 
# FIND_PACKAGE(SDL2 REQUIRED)
# INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS}) 
# PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)

# FIND_PACKAGE(SDL2_image REQUIRED)
# INCLUDE_DIREINCLUDE(FindPkgConfig)
INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS})

# set source and headers
FILE(GLOB_RECURSE SRC_FILES LIST_DIRECTORIES false *.h *.cpp)

# build 
ADD_EXECUTABLE( ${BINARY}_run  ${SRC_FILES} )
ADD_LIBRARY(${BINARY}_lib STATIC ${SRC_FILES} )
TARGET_LINK_LIBRARIES( ${BINARY}_run  ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES}) 
TARGET_LINK_LIBRARIES( ${BINARY}_lib  ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})
