CMAKE_MINIMUM_REQUIRED (VERSION 3.10.2)
# project setting
SET( BINARY ${CMAKE_PROJECT_NAME} )
SET( EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR} )
SET( LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR} )

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS})

# set source and headers
FILE(GLOB_RECURSE SRC_FILES LIST_DIRECTORIES false *.h *.cpp)

message("Build static library first")
ADD_LIBRARY(${BINARY}_lib STATIC ${SRC_FILES} )
TARGET_LINK_LIBRARIES( ${BINARY}_lib PUBLIC ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})

# Interprocedural optimization
include(CheckIPOSupported)
check_ipo_supported(RESULT result)
if(result)
    set_target_properties(${BINARY}_lib PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
    message("Successed to Interprocedural optimization for LIB")
endif()


ADD_EXECUTABLE( ${BINARY}_run main.cpp )
TARGET_LINK_LIBRARIES( ${BINARY}_run PRIVATE ${BINARY}_lib)

