SET(BINARY ${CMAKE_PROJECT_NAME}_tst)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR} )

if(APPLE)
    link_directories(/usr/local/lib)
    set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake_modules")
    find_package(SDL2 REQUIRED)
    find_package(SDL2_image REQUIRED)
    include_directories(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS})
endif()

# include_directories(${CMAKE_SOURCE_DIR}/src)
FILE(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.h *.cpp)
SET(SOURCES ${TEST_SOURCES})


ADD_EXECUTABLE(${BINARY} ${TEST_SOURCES})
ADD_TEST(NAME ${BINARY} COMMAND ${BINARY})
TARGET_LINK_LIBRARIES(${BINARY} PUBLIC ${CMAKE_PROJECT_NAME}_lib gtest)
