CMAKE_MINIMUM_REQUIRED (VERSION 3.15 )
# project setting
SET( BINARY ${CMAKE_PROJECT_NAME} )

# loading SDL2 package 
FIND_PACKAGE(SDL2 REQUIRED)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS}) 

# set source and headers
FILE(GLOB_RECURSE SRC_FILES LIST_DIRECTORIES false *.h *.cpp)

# build 
ADD_LIBRARY(${BINARY}_engine STATIC ${SRC_FILES} )
TARGET_LINK_LIBRARIES( ${BINARY}_engine ${SDL2_LIBRARIES})
